--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
     <h2><strong>Publication</strong></h2>
     <h3><strong>Journal papers </strong></h3>
     <p>- Xin Zhang, Tao Xiao, Ge-Peng Ji, Xuan Wu, Keren Fu*, Qijun Zhao. Explicit Motion Handling and Interactive Prompting for Video Camouflaged Object Detection
-, IEEE Transactions on Image Processing, Accepted. <a href="https://github.com/zhangxin06/EMIP">[<font color="red">Github</font>]</a></p>
+, IEEE Transactions on Image Processing, 34: 2853-2866, 2025. <a href="https://github.com/zhangxin06/EMIP">[<font color="red">Github</font>]</a></p>
     <p>- Yao Jiang, Xin Li, <strong>Keren Fu*</strong>, Qijun Zhao. Transformer-based Light Field Salient Object Detection and Its Application to Autofocus, IEEE Transactions on Image Processing, 33: 6647-6659, 2024. <a href="https://github.com/jiangyao-scu/TLFNet">[<font color="red">Github</font>]</a></p>
     
     <p>- Ao Mou, Yukang Lu, Jiahao He, Dingyao Min, <strong>Keren Fu*</strong>, Qijun Zhao. Salient Object Detection in RGB-D Videos, IEEE Transactions on Image Processing, 33: 6660-6675, 2024. <a href="https://github.com/kerenfu/RDVS/">[<font color="red">Github</font>]</a>
@@ -216,7 +216,7 @@
 Salient Object Detection and Beyond, IEEE Transactions on Neural Networks and Learning Systems, 35(3): 4309-4323, 2024. <a href="https://github.com/QianChen98/RD3D">[<font color="red">Github</font>]</a></p>
     <p>- Huakun Yang, Qian Chen, <strong>Keren Fu</strong>, Lei Zhu, Lujia Jin, Qiushi Ren, Hongwei Du, Yanye Lu. Boosting Medical Image Segmentation via Conditional-Synergistic Convolution and Lesion Decoupling, Computerized Medical Imaging and Graphics, 101: 102110, 2022.</p>
     <p>- Geng Chen, Huazhu Fu, Tao Zhou, Guobao Xiao, <strong>Keren Fu</strong>, Yong Xia, Yanning Zhang. Fusion-Embedding Siamese Network for Light Field Salient Object Detection, IEEE Transactions on Multimedia, 26: 984-994, 2023.</p>
-    <p>- Dingyao Min, Chao Zhang, Yukang Lu, <strong>Keren Fu*</strong>, Qijun Zhao. Mutual-Guidance Transformer-Embedding Network For Video Salient Object Detection, IEEE Signal Processing Letters, 29: 1674-1678, 2022. <a href="https://github.com/mindingyao/MGT-Net">[<font color="red">github</font>]</a></p>
+    <p>- Dingyao Min, Chao Zhang, Yukang Lu, <strong>Keren Fu*</strong>, Qijun Zhao. Mutual-Guidance Transformer-Embedding Network For Video Salient Object Detection, IEEE Signal Processing Letters, 29: 1674-1678, 2022. <a href="https://github.com/mindingyao/MGT-Net">[<font color="red">Github</font>]</a></p>
     <p>- Yao Jiang, Wenbo Zhang, <strong>Keren Fu*</strong>, Qijun Zhao. MEANet: Multi-Modal Edge-Aware Network for Light Field Salient Object Detection, Neurocomputing, 491: 78-90, 2022. <a href="https://github.com/jiangyao-scu/MEANet">[<font color="red">Github</font>]</a></p>
     <p>- Ge-Peng Ji, Lei Zhu, Mingchen Zhuge, <strong>Keren Fu*</strong>. Fast Camouflaged Object Detection via Edge-based Reversible Re-calibration Network, Pattern Recognition,  123: 108414, 2022. <a href="https://github.com/GewelsJI/ERRNet">[<font color="red">Github</font>]</a></p>
     <p>- Ge-Peng Ji, Deng-Ping Fan, <strong>Keren Fu</strong>, Zhe Wu, Jianbing Shen, Ling Shao. Full-Duplex Strategy for Video Object Segmentation, Computational Visual Media, 9(1): 155-175, 2023.<a href="https://link.springer.com/journal/41095/updates/26965690">[<font color="red">Honorable Mention Award</font>]</a></p>
@@ -267,7 +267,7 @@ Salient Object Detection and Beyond, IEEE Transactions on Neural Networks and Le
     <p>- Yanfeng Li, Ka-Hou Chan, Yue Sun, Chan-Tong Lam, Tong Tong, Zitong Yu, <strong>Keren Fu</strong>, Xiaohong Liu, Tao Tan, &ldquo;MoEdit: On Learning Quantity Perception for Multi-object Image Editing,&rdquo; in IEEE/CVF Computer Vision and Pattern Recognition Conference (CVPR), 2025. <a href="https://github.com/Tear-kitty/MoEdit">[<font color="red">Github</font>]</a></p>
     <p>- Xianjie Liu, <strong>Keren Fu*</strong>, Yao Jiang, Qijun Zhao &ldquo;DIS-SAM: Promoting Segment Anything Model
 towards Highly Accurate Dichotomous Image 
-Segmentation,&rdquo; in IEEE International Conference on Multimedia and Expo (ICME), 2025. <a href="https://github.com/Tennine2077/DIS-SAM">[<font color="red">github</font>]</a></p>
+Segmentation,&rdquo; in IEEE International Conference on Multimedia and Expo (ICME), 2025. <a href="https://github.com/Tennine2077/DIS-SAM">[<font color="red">Github</font>]</a></p>
     <p>- Xin Li, <strong>Keren Fu*</strong>, Qijun Zhao, &ldquo;Camouflaged Object Detection via Neural Architecture Search,&rdquo; in IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP), 2025. <a href="https://github.com/BoydeLi/ALRNet">[<font color="red">Github</font>]</a></p>
     <p>- Daerji Suolang, Jiahao He, Wangchuk Tsering, <strong>Keren Fu*</strong>, Xiaofeng Li, Qijun Zhao, &ldquo;Lightweight Multi-Frequency Enhancement Network for RGB-D Video Salient Object Detection,&rdquo; in IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP), 2025. <a href="https://github.com/Tibetsonam/MFENet">[<font color="red">Github</font>]</a></p>
     <p>- Shanfeng Zhou, Bo Yuan, <strong>Keren Fu*</strong>, Hailun Zhan, Qijun Zhao, &ldquo;Prior Mask-Guided Highly Accurate Dichotomous Image Segmentation,&rdquo; in Pacific Rim International Conference on Artificial Intelligence (PRICAI), 2024.</p>
