--- a/index.html
+++ b/index.html
@@ -202,13 +202,14 @@
   				<div class="wow fadeInUp section-title" data-wow-delay="0.2s">
     <h2><strong>Publication</strong></h2>
     <h3><strong>Journal papers </strong></h3>
-    <p>- Xin Zhang, Tao Xiao, Ge-Peng Ji, Xuan Wu, Keren Fu*, Qijun Zhao. Explicit Motion Handling and Interactive Prompting for Video Camouflaged Object Detection
+    <p>- Xin Zhang, <strong>Keren Fu*</strong>, Qijun Zhao. Dynamic patch-aware enrichment transformer for occluded person re-identification, Knowledge-Based Systems, 327: 114193, 2025. <a href="https://github.com/zhangxin06/DPEFormer">[<font color="red">Github</font>]</a></p>
+    <p>- Xin Zhang, Tao Xiao, Ge-Peng Ji, Xuan Wu, <strong>Keren Fu*</strong>, Qijun Zhao. Explicit Motion Handling and Interactive Prompting for Video Camouflaged Object Detection
 , IEEE Transactions on Image Processing, 34: 2853-2866, 2025. <a href="https://github.com/zhangxin06/EMIP">[<font color="red">Github</font>]</a></p>
     <p>- Yao Jiang, Xin Li, <strong>Keren Fu*</strong>, Qijun Zhao. Transformer-based Light Field Salient Object Detection and Its Application to Autofocus, IEEE Transactions on Image Processing, 33: 6647-6659, 2024. <a href="https://github.com/jiangyao-scu/TLFNet">[<font color="red">Github</font>]</a></p>
     
     <p>- Ao Mou, Yukang Lu, Jiahao He, Dingyao Min, <strong>Keren Fu*</strong>, Qijun Zhao. Salient Object Detection in RGB-D Videos, IEEE Transactions on Image Processing, 33: 6660-6675, 2024. <a href="https://github.com/kerenfu/RDVS/">[<font color="red">Github</font>]</a>
     
-    <p>- Yao Jiang, Xinyu Yan, Ge-Peng Ji, <strong>Keren Fu*</strong>, Meijun Sun, Huan Xiong*, Deng-Ping Fan, Fahad Shahbaz Khan. Effectiveness Assessment of Recent Large Vision-Language Models, Visual Intelligence (VI), 2024. <a href="https://arxiv.org/abs/2403.04306">[<font color="red">Arxiv</font>]</a></p>
+    <p>- Yao Jiang, Xinyu Yan, Ge-Peng Ji, <strong>Keren Fu*</strong>, Meijun Sun, Huan Xiong*, Deng-Ping Fan, Fahad Shahbaz Khan. Effectiveness Assessment of Recent Large Vision-Language Models, Visual Intelligence (VI), 2(17), 2024. <a href="https://arxiv.org/abs/2403.04306">[<font color="red">Arxiv</font>]</a></p>
     <p>- Bo Yuan, Yao Jiang, <strong>Keren Fu*</strong>, Qijun Zhao. Parallax-aware Network for Light Field Salient Object Detection, IEEE Signal Processing Letters, 31: 810-814, 2024. <a href="https://github.com/kerenfu/LFSOD-Survey/">[<font color="red">Github</font>]</a></p>
     <p>- Chengcheng Lu, Yiben Jiang, <strong>Keren Fu*</strong>, Qijun Zhao, Hongyu Yang. LSTPNet: Long short-term perception network for dynamic facial expression recognition in the wild, Image and Vision Computing, 142: 104915, 2024. <a href="https://github.com/LLFabiann/LSTPNet/">[<font color="red">Github</font>]</a></p>
     <p>- <strong>Keren Fu</strong>, Jing He, Xiao Yang. Few-Shot Learning-based RGB-D Salient Object Detection: A Case Study, Neurocomputing, 512: 142-152, 2022.</p>
@@ -387,7 +388,7 @@ Segmentation,&rdquo; in IEEE International Conference on Multimedia and Expo (IC
               <h4 class="wow fadeInUp" data-wow-delay="0.1s">Computer Vision and Image Understanding</h4>
               <h4 class="wow fadeInUp" data-wow-delay="0.1s">Image and Vision Computing</h4>
               <h3 class="wow fadeInUp" data-wow-delay="0.1s"><strong>TPC members:</strong></h3>
-              <h4 class="wow fadeInUp" data-wow-delay="0.1s">AAAI-2021, IJCAI-2021, CVPR-2021, IJCAI-2022, CVPR-2023, IJCAI-2023, ICCV-2023, CVPR-2024, IJCAI-2024, ECCV-2024, CVPR-2025, ICCV-2025</h4>
+              <h4 class="wow fadeInUp" data-wow-delay="0.1s">AAAI-2021, IJCAI-2021, CVPR-2021, IJCAI-2022, CVPR-2023, IJCAI-2023, ICCV-2023, CVPR-2024, IJCAI-2024, ECCV-2024, CVPR-2025, ICCV-2025, AAAI-2026</h4>
         </div>
       </div>
     </div>
