--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
     <div class="row" >
               <div class="col-md-11 col-sm-11" style="border:3px solid #5CACEE;">
               <h2 class="wow fadeInUp" data-wow-delay="0.1s"><strong>News:</strong></h2>
+              <h4  class="wow fadeInUp" data-wow-delay="0.1s">2025-11: I am invited to serve as a reviewer for CVPR 2026!</h4>
             <h4  class="wow fadeInUp" data-wow-delay="0.1s">2025-11: One paper is accepted by AAAI 2026!</h4>
             <h4  class="wow fadeInUp" data-wow-delay="0.1s">2025-4: One paper is accepted by IEEE TIP!</h4>
             <h4  class="wow fadeInUp" data-wow-delay="0.1s">2025-4: Our Samba work is selected as Highlight in CVPR 2025!<a href="https://github.com/Jia-hao999/Samba">[<font color="red">Link</font>]</a></h4>
@@ -390,7 +391,7 @@ Segmentation,&rdquo; in IEEE International Conference on Multimedia and Expo (IC
               <h4 class="wow fadeInUp" data-wow-delay="0.1s">Computer Vision and Image Understanding</h4>
               <h4 class="wow fadeInUp" data-wow-delay="0.1s">Image and Vision Computing</h4>
               <h3 class="wow fadeInUp" data-wow-delay="0.1s"><strong>TPC members:</strong></h3>
-              <h4 class="wow fadeInUp" data-wow-delay="0.1s">AAAI-2021, IJCAI-2021, CVPR-2021, IJCAI-2022, CVPR-2023, IJCAI-2023, ICCV-2023, CVPR-2024, IJCAI-2024, ECCV-2024, CVPR-2025, ICCV-2025, AAAI-2026</h4>
+              <h4 class="wow fadeInUp" data-wow-delay="0.1s">AAAI-2021, IJCAI-2021, CVPR-2021, IJCAI-2022, CVPR-2023, IJCAI-2023, ICCV-2023, CVPR-2024, IJCAI-2024, ECCV-2024, CVPR-2025, ICCV-2025, AAAI-2026, CVPR-2026</h4>
         </div>
       </div>
     </div>
