--- a/index.html
+++ b/index.html
@@ -377,6 +377,7 @@ Segmentation,&rdquo; in IEEE International Conference on Multimedia and Expo (IC
               <h2 class="wow fadeInUp" data-wow-delay="0.1s"><strong>Academic services</strong></h2>
               <h3 class="wow fadeInUp" data-wow-delay="0.1s"><strong>Reviewer for:</strong></h3>
               <h4 class="wow fadeInUp" data-wow-delay="0.1s">ACM Computing Surveys </h4>
+              <h4 class="wow fadeInUp" data-wow-delay="0.1s">International Journal of Computer Vision </h4>
               <h4 class="wow fadeInUp" data-wow-delay="0.1s">IEEE Transactions on Pattern Analysis and Machine Intelligence </h4>
               <h4 class="wow fadeInUp" data-wow-delay="0.1s">IEEE Transactions on Image Processing </h4>
               <h4 class="wow fadeInUp" data-wow-delay="0.1s">IEEE Transactions on Neural Networks and Learning Systems </h4>
@@ -385,11 +386,11 @@ Segmentation,&rdquo; in IEEE International Conference on Multimedia and Expo (IC
               <h4 class="wow fadeInUp" data-wow-delay="0.1s">IEEE Transactions on Automation Science and Engineering </h4>
               <h4 class="wow fadeInUp" data-wow-delay="0.1s">IEEE Transactions on Industrial Informatics </h4>
               <h4 class="wow fadeInUp" data-wow-delay="0.1s">IEEE Transactions on Industrial Electronics </h4>
-              <h4  class="wow fadeInUp" data-wow-delay="0.1s">Pattern Recognition</h4>
-              <h4  class="wow fadeInUp" data-wow-delay="0.1s">Pattern Recognition Letters</h4>
+              <h4  class="wow fadeInUp" data-wow-delay="0.1s">Pattern Recognition</h4>     
               <h4  class="wow fadeInUp" data-wow-delay="0.1s">Neurocomputing</h4>
               <h4 class="wow fadeInUp" data-wow-delay="0.1s">Computer Vision and Image Understanding</h4>
               <h4 class="wow fadeInUp" data-wow-delay="0.1s">Image and Vision Computing</h4>
+              <h4 class="wow fadeInUp" data-wow-delay="0.1s">……</h4>
               <h3 class="wow fadeInUp" data-wow-delay="0.1s"><strong>TPC members:</strong></h3>
               <h4 class="wow fadeInUp" data-wow-delay="0.1s">AAAI-2021, IJCAI-2021, CVPR-2021, IJCAI-2022, CVPR-2023, IJCAI-2023, ICCV-2023, CVPR-2024, IJCAI-2024, ECCV-2024, CVPR-2025, ICCV-2025, AAAI-2026, CVPR-2026</h4>
         </div>
