--- a/index.html
+++ b/index.html
@@ -380,6 +380,8 @@ Segmentation,&rdquo; in IEEE International Conference on Multimedia and Expo (IC
               <h4 class="wow fadeInUp" data-wow-delay="0.1s">International Journal of Computer Vision </h4>
               <h4 class="wow fadeInUp" data-wow-delay="0.1s">IEEE Transactions on Pattern Analysis and Machine Intelligence </h4>
               <h4 class="wow fadeInUp" data-wow-delay="0.1s">IEEE Transactions on Image Processing </h4>
+              <h4 class="wow fadeInUp" data-wow-delay="0.1s">IEEE Transactions on Information Forensics
+& Security </h4>
               <h4 class="wow fadeInUp" data-wow-delay="0.1s">IEEE Transactions on Neural Networks and Learning Systems </h4>
               <h4 class="wow fadeInUp" data-wow-delay="0.1s">IEEE Transactions on Multimedia</h4>
               <h4 class="wow fadeInUp" data-wow-delay="0.1s">IEEE Transactions on Circuits and Systems for Video Technology</h4>
