--- a/index.html
+++ b/index.html
@@ -89,64 +89,65 @@
     <div class="row" >
               <div class="col-md-11 col-sm-11" style="border:3px solid #5CACEE;">
               <h2 class="wow fadeInUp" data-wow-delay="0.1s"><strong>News:</strong></h2>
+              <h4  class="wow fadeInUp" data-wow-delay="0.1s">2026-01: I am invited to serve as a reviewer for ECCV 2026!</h4>
               <h4  class="wow fadeInUp" data-wow-delay="0.1s">2025-11: I am invited to serve as a reviewer for CVPR 2026!</h4>
             <h4  class="wow fadeInUp" data-wow-delay="0.1s">2025-11: One paper is accepted by AAAI 2026!</h4>
-            <h4  class="wow fadeInUp" data-wow-delay="0.1s">2025-4: One paper is accepted by IEEE TIP!</h4>
-            <h4  class="wow fadeInUp" data-wow-delay="0.1s">2025-4: Our Samba work is selected as Highlight in CVPR 2025!<a href="https://github.com/Jia-hao999/Samba">[<font color="red">Link</font>]</a></h4>
-            <h4  class="wow fadeInUp" data-wow-delay="0.1s">2025-2: Two papers are accepted to CVPR 2025!</h4>
-            <h4  class="wow fadeInUp" data-wow-delay="0.1s">2025-2: I am invited to serve as a reviewer for ICCV 2025!</h4>
+            <h4  class="wow fadeInUp" data-wow-delay="0.1s">2025-04: One paper is accepted by IEEE TIP!</h4>
+            <h4  class="wow fadeInUp" data-wow-delay="0.1s">2025-04: Our Samba work is selected as Highlight in CVPR 2025!<a href="https://github.com/Jia-hao999/Samba">[<font color="red">Link</font>]</a></h4>
+            <h4  class="wow fadeInUp" data-wow-delay="0.1s">2025-02: Two papers are accepted to CVPR 2025!</h4>
+            <h4  class="wow fadeInUp" data-wow-delay="0.1s">2025-02: I am invited to serve as a reviewer for ICCV 2025!</h4>
             <h4  class="wow fadeInUp" data-wow-delay="0.1s">2024-12: Two papers are accepted to ICASSP 2025!</h4>
             <h4  class="wow fadeInUp" data-wow-delay="0.1s">2024-11: I am invited to serve as a reviewer for CVPR 2025!</h4>
             <h4  class="wow fadeInUp" data-wow-delay="0.1s">2024-11: Two papers are accepted by IEEE TIP!</h4>
-            <h4  class="wow fadeInUp" data-wow-delay="0.1s">2024-7: One paper is accepted to ECCV 2024!</h4>
-            <h4  class="wow fadeInUp" data-wow-delay="0.1s">2024-6: Four papers are accepted to PRCV 2024!</h4>
-			<h4  class="wow fadeInUp" data-wow-delay="0.1s">2024-5: One paper is accepted by Visual Intelligence!<a href="https://arxiv.org/abs/2403.04306">[<font color="red">Arxiv</font>]</a></h4>
-            <h4  class="wow fadeInUp" data-wow-delay="0.1s">2024-4: Our paper on video object segmentation has received Honorable Mention Award in CVMJ! Congrats to Ge-Peng and all co-authors!<a href="https://link.springer.com/journal/41095/updates/26965690">[<font color="red">Link</font>]</a></h4>
-            <h4  class="wow fadeInUp" data-wow-delay="0.1s">2024-2: One paper is accepted by IEEE Signal Processing Letters!<a href="https://github.com/kerenfu/LFSOD-Survey/">[<font color="red">Link</font>]</a></h4>
-            <h4  class="wow fadeInUp" data-wow-delay="0.1s">2024-1: I am invited to serve as a reviewer for ECCV 2024!</h4>
-            <h4  class="wow fadeInUp" data-wow-delay="0.1s">2024-1: One paper is accepted by Image and Vision Computing!<a href="https://github.com/LLFabiann/LSTPNet/">[<font color="red">Link</font>]</a></h4>
+            <h4  class="wow fadeInUp" data-wow-delay="0.1s">2024-07: One paper is accepted to ECCV 2024!</h4>
+            <h4  class="wow fadeInUp" data-wow-delay="0.1s">2024-06: Four papers are accepted to PRCV 2024!</h4>
+			<h4  class="wow fadeInUp" data-wow-delay="0.1s">2024-05: One paper is accepted by Visual Intelligence!<a href="https://arxiv.org/abs/2403.04306">[<font color="red">Arxiv</font>]</a></h4>
+            <h4  class="wow fadeInUp" data-wow-delay="0.1s">2024-04: Our paper on video object segmentation has received Honorable Mention Award in CVMJ! Congrats to Ge-Peng and all co-authors!<a href="https://link.springer.com/journal/41095/updates/26965690">[<font color="red">Link</font>]</a></h4>
+            <h4  class="wow fadeInUp" data-wow-delay="0.1s">2024-02: One paper is accepted by IEEE Signal Processing Letters!<a href="https://github.com/kerenfu/LFSOD-Survey/">[<font color="red">Link</font>]</a></h4>
+            <h4  class="wow fadeInUp" data-wow-delay="0.1s">2024-01: I am invited to serve as a reviewer for ECCV 2024!</h4>
+            <h4  class="wow fadeInUp" data-wow-delay="0.1s">2024-01: One paper is accepted by Image and Vision Computing!<a href="https://github.com/LLFabiann/LSTPNet/">[<font color="red">Link</font>]</a></h4>
             <h4  class="wow fadeInUp" data-wow-delay="0.1s">2023-12: We conduct a preliminary work to promote segmentation accuracy of SAM!<a href="https://arxiv.org/abs/2401.00248">[<font color="red">Arxiv</font>]</a><a href="https://github.com/Tennine2077/DIS-SAM/">[<font color="red">Link</font>]</a></h4>
             <h4  class="wow fadeInUp" data-wow-delay="0.1s">2023-12: I am invited to serve as a PC member for IJCAI 2024!</h4>
                   <h4  class="wow fadeInUp" data-wow-delay="0.1s">2023-10: We have released a pioneer work for RGB-D Video Salient Object Detection!<a href="https://github.com/kerenfu/RDVS/">[<font color="red">Link</font>]</a></h4>              
                  <h4  class="wow fadeInUp" data-wow-delay="0.1s">2023-10: I am invited to serve as a reviewer for CVPR 2024!</h4>
                   <h4  class="wow fadeInUp" data-wow-delay="0.1s">2023-10: I am acknowledged as  Outstanding Reviewer at ICCV 2023!<a href="https://iccv2023.thecvf.com/iccv2023.main.conference.program-38--MTE.php">[<font color="red">Link</font>]</a></h4>
-                <h4  class="wow fadeInUp" data-wow-delay="0.1s">2023-8: One paper on dynmaic facial expression recognition is accepted by PRCV-2023!</h4>
-                <h4  class="wow fadeInUp" data-wow-delay="0.1s">2023-6: Congratulations to three my master students, Yao Jiang, Yukang Lu, and Dingyao Min, for receiving Outstanding Master Thesis Awards from the College!</h4>
-               <h4  class="wow fadeInUp" data-wow-delay="0.1s">2023-2: I am invited to serve as a reviewer for ICCV 2023!</h4>
+                <h4  class="wow fadeInUp" data-wow-delay="0.1s">2023-08: One paper on dynmaic facial expression recognition is accepted by PRCV-2023!</h4>
+                <h4  class="wow fadeInUp" data-wow-delay="0.1s">2023-06: Congratulations to three my master students, Yao Jiang, Yukang Lu, and Dingyao Min, for receiving Outstanding Master Thesis Awards from the College!</h4>
+               <h4  class="wow fadeInUp" data-wow-delay="0.1s">2023-02: I am invited to serve as a reviewer for ICCV 2023!</h4>
                <h4  class="wow fadeInUp" data-wow-delay="0.1s">2022-12: I am invited to serve as a PC member for IJCAI 2023!</h4>
                <h4  class="wow fadeInUp" data-wow-delay="0.1s">2022-10: I am invited to serve as a reviewer for CVPR 2023!</h4>
-               <h4  class="wow fadeInUp" data-wow-delay="0.1s">2022-9: One paper on few-shot learning-based RGB-D SOD is accepted by Neurocomputing!</h4>
-               <h4  class="wow fadeInUp" data-wow-delay="0.1s">2022-8: One paper is accepted by IEEE TNNLS!<a href="https://github.com/QianChen98/RD3D">[<font color="red">Link</font>]</a></h4>
-               <h4  class="wow fadeInUp" data-wow-delay="0.1s">2022-8: One paper is accepted by Computerized Medical Imaging and Graphics!</h4>
-               <h4  class="wow fadeInUp" data-wow-delay="0.1s">2022-8: One paper is accepted by IEEE TMM!</h4>
-               <h4  class="wow fadeInUp" data-wow-delay="0.1s">2022-7: One paper is accepted by IEEE Signal Processing Letters!</h4>
-               <h4  class="wow fadeInUp" data-wow-delay="0.1s">2022-6: We release a Demo website for our previous RGB-D SOD paper published on ACMMM-2021! Try it yourself!!<a href="https://rgbdsod-krf.natapp4.cc/">[<font color="red">Online demo</font>]</a></h4>
-               <h4  class="wow fadeInUp" data-wow-delay="0.1s">2022-3: One paper is accepted by Neurocomputing!</h4>
+               <h4  class="wow fadeInUp" data-wow-delay="0.1s">2022-09: One paper on few-shot learning-based RGB-D SOD is accepted by Neurocomputing!</h4>
+               <h4  class="wow fadeInUp" data-wow-delay="0.1s">2022-08: One paper is accepted by IEEE TNNLS!<a href="https://github.com/QianChen98/RD3D">[<font color="red">Link</font>]</a></h4>
+               <h4  class="wow fadeInUp" data-wow-delay="0.1s">2022-08: One paper is accepted by Computerized Medical Imaging and Graphics!</h4>
+               <h4  class="wow fadeInUp" data-wow-delay="0.1s">2022-08: One paper is accepted by IEEE TMM!</h4>
+               <h4  class="wow fadeInUp" data-wow-delay="0.1s">2022-07: One paper is accepted by IEEE Signal Processing Letters!</h4>
+               <h4  class="wow fadeInUp" data-wow-delay="0.1s">2022-06: We release a Demo website for our previous RGB-D SOD paper published on ACMMM-2021! Try it yourself!!<a href="https://rgbdsod-krf.natapp4.cc/">[<font color="red">Online demo</font>]</a></h4>
+               <h4  class="wow fadeInUp" data-wow-delay="0.1s">2022-03: One paper is accepted by Neurocomputing!</h4>
                <h4  class="wow fadeInUp" data-wow-delay="0.1s">2021-10: One paper is accepted by Pattern Recognition!<a href="https://github.com/GewelsJI/ERRNet">[<font color="red">Link</font>]</a></h4>
               <h4  class="wow fadeInUp" data-wow-delay="0.1s">2021-10: One paper is accepted by Computational Visual Media (CVMJ)!<a href="https://github.com/GewelsJI/FSNet">[<font color="red">Link</font>]</a></h4>
               <h4  class="wow fadeInUp" data-wow-delay="0.1s">2021-10: Congratulations to my master student Wenbo Zhang for acceptance of National Scholarship!</h4>
               <h4  class="wow fadeInUp" data-wow-delay="0.1s">2021-10: One paper is accepted by Computational Visual Media (CVMJ)!<a href="https://github.com/kerenfu/LFSOD-Survey/">[<font color="red">Link</font>]</a></h4>
-              <h4  class="wow fadeInUp" data-wow-delay="0.1s">2021-7: One paper is accepted by ICCV-2021!<a href="https://github.com/GewelsJI/FSNet">[<font color="red">Link</font>]</a></h4>
-              <h4  class="wow fadeInUp" data-wow-delay="0.1s">2021-7: I will serve as a TPC member for IJCAI-2022!</h4>
-              <h4  class="wow fadeInUp" data-wow-delay="0.1s">2021-7: One paper is accepted by ACMMM-2021!<a href="https://github.com/zwbx/DFM-Net">[<font color="red">Link</font>]</a><a href="https://rgbdsod-krf.natapp4.cc/">[<font color="red">Online demo</font>]</a></h4>
-              <h4  class="wow fadeInUp" data-wow-delay="0.1s">2021-7: One paper is accepted by Neurocomputing!</h4>
-              <h4  class="wow fadeInUp" data-wow-delay="0.1s">2021-4: One paper is accepted by IEEE TII!</h4>
-              <h4  class="wow fadeInUp" data-wow-delay="0.1s">2021-4: One paper is accepted by IEEE TPAMI!</h4>
-              <h4  class="wow fadeInUp" data-wow-delay="0.1s">2021-4: One paper is accepted by Neurocomputing!</h4>
-              <h4  class="wow fadeInUp" data-wow-delay="0.1s">2021-3: One paper is accepted by ICME-2021!</h4>
-              <h4  class="wow fadeInUp" data-wow-delay="0.1s">2021-1: One Neurocomputing paper accepted!</h4>
+              <h4  class="wow fadeInUp" data-wow-delay="0.1s">2021-07: One paper is accepted by ICCV-2021!<a href="https://github.com/GewelsJI/FSNet">[<font color="red">Link</font>]</a></h4>
+              <h4  class="wow fadeInUp" data-wow-delay="0.1s">2021-07: I will serve as a TPC member for IJCAI-2022!</h4>
+              <h4  class="wow fadeInUp" data-wow-delay="0.1s">2021-07: One paper is accepted by ACMMM-2021!<a href="https://github.com/zwbx/DFM-Net">[<font color="red">Link</font>]</a><a href="https://rgbdsod-krf.natapp4.cc/">[<font color="red">Online demo</font>]</a></h4>
+              <h4  class="wow fadeInUp" data-wow-delay="0.1s">2021-07: One paper is accepted by Neurocomputing!</h4>
+              <h4  class="wow fadeInUp" data-wow-delay="0.1s">2021-04: One paper is accepted by IEEE TII!</h4>
+              <h4  class="wow fadeInUp" data-wow-delay="0.1s">2021-04: One paper is accepted by IEEE TPAMI!</h4>
+              <h4  class="wow fadeInUp" data-wow-delay="0.1s">2021-04: One paper is accepted by Neurocomputing!</h4>
+              <h4  class="wow fadeInUp" data-wow-delay="0.1s">2021-03: One paper is accepted by ICME-2021!</h4>
+              <h4  class="wow fadeInUp" data-wow-delay="0.1s">2021-01: One Neurocomputing paper accepted!</h4>
               <h4  class="wow fadeInUp" data-wow-delay="0.1s">2020-12: One paper is accepted by AAAI-2021!<a href="https://github.com/PPOLYpubki/RD3D/">[<font color="red">Link</font>]</a></h4>
               <h4  class="wow fadeInUp" data-wow-delay="0.1s">2020-11: We have released a Review and Benchmark for Light Field Salient Object Detection!<a href="https://github.com/kerenfu/LFSOD-Survey/">[<font color="red">Link</font>]</a></h4>
               <h4  class="wow fadeInUp" data-wow-delay="0.1s">2020-11: I was invited as a SPC member for IJCAI-2021!</h4>
               <h4  class="wow fadeInUp" data-wow-delay="0.1s">2020-10: One Pattern Recognition paper accepted!</h4>
               <h4  class="wow fadeInUp" data-wow-delay="0.1s">2020-10: I serve as a TPC member for IJCAI-2021!</h4>
-              <h4  class="wow fadeInUp" data-wow-delay="0.1s">2020-9: I serve as a TPC member for AAAI-2021!</h4>
-              <h4  class="wow fadeInUp" data-wow-delay="0.1s">2020-8: One Image and Vision Computing paper accepted!</h4>
-              <h4  class="wow fadeInUp" data-wow-delay="0.1s">2020-6: One IEEE SPL paper accepted!</h4>
-              <h4  class="wow fadeInUp" data-wow-delay="0.1s">2020-5: One Neurocomputing paper accepted!</h4>
-              <h4  class="wow fadeInUp" data-wow-delay="0.1s">2020-4: One IEEE TMM paper accepted!</h4>
-              <h4  class="wow fadeInUp" data-wow-delay="0.1s">2020-4: One Neurocomputing paper accepted!</h4>
-              <h4  class="wow fadeInUp" data-wow-delay="0.1s">2020-2: One paper on RGB-D SOD is accepted by CVPR-2020!<a href="https://github.com/kerenfu/JLDCF/">[<font color="red">Link</font>]</a></h4>
+              <h4  class="wow fadeInUp" data-wow-delay="0.1s">2020-09: I serve as a TPC member for AAAI-2021!</h4>
+              <h4  class="wow fadeInUp" data-wow-delay="0.1s">2020-08: One Image and Vision Computing paper accepted!</h4>
+              <h4  class="wow fadeInUp" data-wow-delay="0.1s">2020-06: One IEEE SPL paper accepted!</h4>
+              <h4  class="wow fadeInUp" data-wow-delay="0.1s">2020-05: One Neurocomputing paper accepted!</h4>
+              <h4  class="wow fadeInUp" data-wow-delay="0.1s">2020-04: One IEEE TMM paper accepted!</h4>
+              <h4  class="wow fadeInUp" data-wow-delay="0.1s">2020-04: One Neurocomputing paper accepted!</h4>
+              <h4  class="wow fadeInUp" data-wow-delay="0.1s">2020-02: One paper on RGB-D SOD is accepted by CVPR-2020!<a href="https://github.com/kerenfu/JLDCF/">[<font color="red">Link</font>]</a></h4>
               </div>
     </div>
   </div>
@@ -269,7 +270,7 @@ Salient Object Detection and Beyond, IEEE Transactions on Neural Networks and Le
     
     <p>- Jiahao He, <strong>Keren Fu*</strong>, Xiaohong Liu, Qijun Zhao, &ldquo;Samba: A Unified Mamba-based Framework for General Salient Object Detection,&rdquo; in IEEE/CVF Computer Vision and Pattern Recognition Conference (CVPR), 2025. <a href="https://github.com/Jia-hao999/Samba">[<font color="red">Highlight paper | Github</font>]</a><a href="sources/CVPR2025_Samba.pdf">[<font color="red">PDF</font>]</a></p>
     <p>- Yanfeng Li, Ka-Hou Chan, Yue Sun, Chan-Tong Lam, Tong Tong, Zitong Yu, <strong>Keren Fu</strong>, Xiaohong Liu, Tao Tan, &ldquo;MoEdit: On Learning Quantity Perception for Multi-object Image Editing,&rdquo; in IEEE/CVF Computer Vision and Pattern Recognition Conference (CVPR), 2025. <a href="https://github.com/Tear-kitty/MoEdit">[<font color="red">Github</font>]</a></p>
-    <p>- Xianjie Liu, <strong>Keren Fu*</strong>, Yao Jiang, Qijun Zhao &ldquo;DIS-SAM: Promoting Segment Anything Model
+    <p>- Xianjie Liu, <strong>Keren Fu*</strong>, Yao Jiang, Qijun Zhao &ldquo;Promoting Segment Anything Model
 towards Highly Accurate Dichotomous Image 
 Segmentation,&rdquo; in IEEE International Conference on Multimedia and Expo (ICME), 2025. <a href="https://github.com/Tennine2077/DIS-SAM">[<font color="red">Github</font>]</a></p>
     <p>- Xin Li, <strong>Keren Fu*</strong>, Qijun Zhao, &ldquo;Camouflaged Object Detection via Neural Architecture Search,&rdquo; in IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP), 2025. <a href="https://github.com/BoydeLi/ALRNet">[<font color="red">Github</font>]</a></p>
